項目名を追加

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     </div>
 
     <div id="operation">
+        Darkness
         <input type="range" id="opacity" step=10 value=100>
         <span id="output">100</span>%
     </div>
